2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (delete_event_cb): Synchronize with libevent-db API
	changes.
	* event-ui.c (click_delete): Likewise.
	(click_ok): Likewise.
	(edit_event): Likewise.
	* import-vcal.c (do_import_vevent): Likewise.

2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* event-list.c (gtk_event_list_reload_events): Sort
	EVENT_LIST->EVENTS.
	* main.c (alarms_process_pending): Sort LIST.

2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* main.c (schedule_wakeup): Don't cache the event, we only need
	the uid.

2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (gtk_day_view_reload_events): When an event is not
	needed, dereference it immediately.  Free EVENTS.

2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (event_ends): Remove define.
	(found_node): Remove variable.
	(make_set): Likewise.
	(events_overlap): Likewise.
	(find_set_in_list): Likewise.
	(find_set): Likewise.
	(union_set): Likewise.
	(find_overlapping_sets): Likewise.
	(ol_sets_to_rectangles): Likewise.
	(calc_events_positions): New function: new rectangle layout
	implementation.
	(gtk_day_render_set_events): Don't call ol_sets_to_rectangles,
	call calc_events_positions.
	(event_rect_new): Take the X and WIDTH position as arguments
	rather than calculating them here.  Add the newly created
	rectangle to DAY_RENDER->EVENT_RECTANGLES.
	
2006-05-08  Neal H. Walfield  <neal@gnu.org>

	* event-ui.h (unschedule_alarm): Remove declaration.  Update
	callers.
	(schedule_next): Likewise.
	* event-ui.c: Don't include <gpe/schedule.h>.
	(unschedule_alarm): Remove function.
	(schedule_next): Likewise.
	(click_ok): When cancelling the creation of a new an event, also
	call event_remove.
	* configure.ac (DEP_MODULES): Add libhandoff dependency.
	* Makefile.am (gpe_calendar_SOURCES): Add alarm-dialog.c and
	alarm-dialog.h.
	* alarm-dialog.c: New file.
	* alarm-dialog.h: New file.
	* main.c: Include <gpe/schedule.h>, <handoff.h> and
	"alarm-dialog.h".